# ContextCraft

./: .env.example  .gitignore  BENCHMARK.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  railway.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
eval/: README.md  run_eval.py  test_cases.json
migrations/: 003_chunk_edges.sql
src/contextcraft/: __init__.py  config.py  http_timeouts.py  models.py  security.py  startup.py
src/contextcraft/api/: __init__.py  main.py
src/contextcraft/api/routes/: __init__.py
src/contextcraft/cli/: __init__.py  main.py
src/contextcraft/db/: __init__.py  chunks_repo.py  connection.py  graph_repo.py
src/contextcraft/db/migrations/: 001_init.sql  __init__.py
src/contextcraft/embeddings/: __init__.py  base.py  gemini.py  ollama.py  openai.py
src/contextcraft/git/: __init__.py  async_git.py  blame.py  history.py
src/contextcraft/graph/: __init__.py  expander.py  models.py  resolver.py
src/contextcraft/llm/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/contextcraft/parser/: __init__.py  ast_parser.py
src/contextcraft/reranker/: __init__.py  base.py  cohere.py
src/contextcraft/search/: __init__.py  bm25_search.py  context_builder.py  hybrid.py  vector_search.py
tests/: test_graph.py  test_parser.py
tests/fixtures/: import_ground_truth.txt  sample_go.go  sample_javascript.js  sample_python.py  sample_typescript.ts
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
web/src/app/api/ask/: route.ts
web/src/app/api/repos/: route.ts
web/src/components/: SourceCitations.module.css  SourceCitations.tsx
web/src/lib/: types.ts
