[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextcraft-py"
version = "0.3.0"
description = "CLI + API that indexes any codebase with tree-sitter, stores semantic chunks in pgvector, and answers engineering questions with full file + git-history context."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "ContextCraft Contributors" }]
keywords = ["rag", "code-search", "tree-sitter", "pgvector", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typer[all]>=0.12.0",
    "tree-sitter>=0.21.0,<0.22.0",
    "tree-sitter-languages>=1.10.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "rich>=13.0",
    "pathspec>=0.12.0",
    "gitpython>=3.1.0",
    "tenacity>=8.0",
    "tiktoken>=0.7.0",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "cohere>=5.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sse-starlette>=2.0",
    "google-genai>=0.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[project.scripts]
contextcraft = "contextcraft.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/contextcraft"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B905", "UP042", "W293"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "tree_sitter_languages.*",
    "google.*",
    "slowapi",
    "slowapi.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::FutureWarning:tree_sitter",
    "ignore::FutureWarning:tree_sitter_languages",
]
markers = [
    "unit: Unit tests",
]
